--- a/testing.ipynb
+++ b/testing.ipynb
@@ -451,43 +451,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def describe(data):\n",
-    "\tcount = data.length\n"
+    "def std(data, v_mean, count):\n",
+    "\texisting = pd.notnull(data)\n",
+    "\tdistances = []\n",
+    "\tfor i in range(count):\n",
+    "\t\tif (existing[i] == True):\n",
+    "\t\t\tdistances.append((data[i] - v_mean) ** 2)\n",
+    "\tx = 0\n",
+    "\tfor i in range(len(distances)):\n",
+    "\t\tif (existing[i] == True):\n",
+    "\t\t\tx += distances[i]\n",
+    "\tv_std = np.sqrt(x / count)\n",
+    "\treturn v_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean(data):\n",
+    "\texisting = pd.notnull(data)\n",
+    "\tn = 0\n",
+    "\tfor i in range(len(data)):\n",
+    "\t\tif (existing[i] == True):\n",
+    "\t\t\tn += data[i]\n",
+    "\tn /= len(existing[existing == True])\n",
+    "\treturn n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def describe(data):\n",
+    "\texisting = pd.notnull(data)\n",
+    "\tcount = len(existing[existing == True])\n",
+    "\tv_mean = mean(data)\n",
+    "\tv_std = std(data, v_mean, count)\n",
+    "\tprint(f\"count: {count}, mean: {v_mean}, std: {v_std}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index\n",
-      "Arithmancy\n",
-      "Astronomy\n",
-      "Herbology\n",
-      "Defense Against the Dark Arts\n",
-      "Divination\n",
-      "Muggle Studies\n",
-      "Ancient Runes\n",
-      "History of Magic\n",
-      "Transfiguration\n",
-      "Potions\n",
-      "Care of Magical Creatures\n",
-      "Charms\n",
-      "Flying\n"
+      "<class 'numpy.float64'>\n",
+      "count: 1600, mean: 799.5, std: 461.88012514071227\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1566, mean: 49634.57024265645, std: 16377.28029821922\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1568, mean: 39.797130890164766, std: 509.1795556969046\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1567, mean: 1.1410195296768058, std: 5.1240349312797475\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1569, mean: -0.38786349744178583, std: 5.1021836105083995\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1561, mean: 3.1539096732863516, std: 4.021773256671565\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1565, mean: -224.5899148634645, std: 477.4797217497403\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1565, mean: 495.747970059158, std: 103.9637324104164\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1557, mean: 2.9630946151165927, std: 4.308448374675596\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1566, mean: 1030.0969463871315, std: 43.00555661740804\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1570, mean: 5.9503729927800775, std: 3.090833868524231\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1560, mean: -0.0534271367004963, std: 0.9551812373734495\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1600, mean: -243.3744090125, std: 8.780894559533113\n",
+      "<class 'numpy.float64'>\n",
+      "count: 1600, mean: 21.958012499999985, std: 97.6010874237569\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "for column in data:\n",
     "\tif (is_numeric_dtype(data[column])):\n",
     "\t\tdescribe(data[column])"
