--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4       937.434724  4.311066                  -0.264070 -256.38730  157.98  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "max                     3.056546  -225.428140   279.070000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,98 +451,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def std(data, v_mean, count):\n",
-    "\texisting = pd.notnull(data)\n",
-    "\tdistances = []\n",
-    "\tfor i in range(count):\n",
-    "\t\tif (existing[i] == True):\n",
-    "\t\t\tdistances.append((data[i] - v_mean) ** 2)\n",
-    "\tx = 0\n",
-    "\tfor i in range(len(distances)):\n",
-    "\t\tif (existing[i] == True):\n",
-    "\t\t\tx += distances[i]\n",
-    "\tv_std = np.sqrt(x / count)\n",
-    "\treturn v_std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mean(data):\n",
-    "\texisting = pd.notnull(data)\n",
-    "\tn = 0\n",
+    "def max(data):\n",
+    "\tn = data[0]\n",
     "\tfor i in range(len(data)):\n",
-    "\t\tif (existing[i] == True):\n",
-    "\t\t\tn += data[i]\n",
-    "\tn /= len(existing[existing == True])\n",
+    "\t\tif (data[i] > n):\n",
+    "\t\t\tn = data[i]\n",
     "\treturn n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def describe(data):\n",
-    "\texisting = pd.notnull(data)\n",
-    "\tcount = len(existing[existing == True])\n",
-    "\tv_mean = mean(data)\n",
-    "\tv_std = std(data, v_mean, count)\n",
-    "\tprint(f\"count: {count}, mean: {v_mean}, std: {v_std}\")"
+    "def min(data):\n",
+    "\tn = data[0]\n",
+    "\tfor i in range(len(data)):\n",
+    "\t\tif (data[i] < n):\n",
+    "\t\t\tn = data[i]\n",
+    "\treturn n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def std(data, mean, count):\n",
+    "\tvariance = sum((x - mean) ** 2 for x in data) / (count - 1)\n",
+    "\tv_std = np.sqrt(variance)\n",
+    "\treturn v_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def describe(data, column):\n",
+    "\texisting = pd.notnull(data)\n",
+    "\tcount = len(existing[existing == True])\n",
+    "\tmean = np.sum(data[existing]) / count\n",
+    "\tv_std = std(data[existing], mean, count)\n",
+    "\tv_min = min(data)\n",
+    "\tv_max = max(data)\n",
+    "\tquarter = data[existing].sort_values().iloc[int(count * 0.25)]\n",
+    "\thalf = data[existing].sort_values().iloc[int(count * 0.5)]\n",
+    "\tthree_quarters = data[existing].sort_values().iloc[int(count * 0.75)]\n",
+    "\td = {column: [count, mean, v_std, v_min, quarter, half, three_quarters, v_max]}\n",
+    "\treturn pd.DataFrame(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.float64'>\n",
-      "count: 1600, mean: 799.5, std: 461.88012514071227\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1566, mean: 49634.57024265645, std: 16377.28029821922\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1568, mean: 39.797130890164766, std: 509.1795556969046\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1567, mean: 1.1410195296768058, std: 5.1240349312797475\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1569, mean: -0.38786349744178583, std: 5.1021836105083995\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1561, mean: 3.1539096732863516, std: 4.021773256671565\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1565, mean: -224.5899148634645, std: 477.4797217497403\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1565, mean: 495.747970059158, std: 103.9637324104164\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1557, mean: 2.9630946151165927, std: 4.308448374675596\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1566, mean: 1030.0969463871315, std: 43.00555661740804\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1570, mean: 5.9503729927800775, std: 3.090833868524231\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1560, mean: -0.0534271367004963, std: 0.9551812373734495\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1600, mean: -243.3744090125, std: 8.780894559533113\n",
-      "<class 'numpy.float64'>\n",
-      "count: 1600, mean: 21.958012499999985, std: 97.6010874237569\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Arithmancy</th>\n",
+       "      <th>Astronomy</th>\n",
+       "      <th>Herbology</th>\n",
+       "      <th>Defense Against the Dark Arts</th>\n",
+       "      <th>Divination</th>\n",
+       "      <th>Muggle Studies</th>\n",
+       "      <th>Ancient Runes</th>\n",
+       "      <th>History of Magic</th>\n",
+       "      <th>Transfiguration</th>\n",
+       "      <th>Potions</th>\n",
+       "      <th>Care of Magical Creatures</th>\n",
+       "      <th>Charms</th>\n",
+       "      <th>Flying</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1600.00000</td>\n",
+       "      <td>1566.000000</td>\n",
+       "      <td>1568.000000</td>\n",
+       "      <td>1567.000000</td>\n",
+       "      <td>1569.000000</td>\n",
+       "      <td>1561.000000</td>\n",
+       "      <td>1565.000000</td>\n",
+       "      <td>1565.000000</td>\n",
+       "      <td>1557.000000</td>\n",
+       "      <td>1566.000000</td>\n",
+       "      <td>1570.000000</td>\n",
+       "      <td>1560.000000</td>\n",
+       "      <td>1600.000000</td>\n",
+       "      <td>1600.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>799.50000</td>\n",
+       "      <td>49634.570243</td>\n",
+       "      <td>39.797131</td>\n",
+       "      <td>1.141020</td>\n",
+       "      <td>-0.387863</td>\n",
+       "      <td>3.153910</td>\n",
+       "      <td>-224.589915</td>\n",
+       "      <td>495.747970</td>\n",
+       "      <td>2.963095</td>\n",
+       "      <td>1030.096946</td>\n",
+       "      <td>5.950373</td>\n",
+       "      <td>-0.053427</td>\n",
+       "      <td>-243.374409</td>\n",
+       "      <td>21.958012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>462.02453</td>\n",
+       "      <td>16679.806036</td>\n",
+       "      <td>520.298268</td>\n",
+       "      <td>5.219682</td>\n",
+       "      <td>5.212794</td>\n",
+       "      <td>4.155301</td>\n",
+       "      <td>486.344840</td>\n",
+       "      <td>106.285165</td>\n",
+       "      <td>4.425775</td>\n",
+       "      <td>44.125116</td>\n",
+       "      <td>3.147854</td>\n",
+       "      <td>0.971457</td>\n",
+       "      <td>8.783640</td>\n",
+       "      <td>97.631602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>-24370.000000</td>\n",
+       "      <td>-966.740546</td>\n",
+       "      <td>-10.295663</td>\n",
+       "      <td>-10.162119</td>\n",
+       "      <td>-8.727000</td>\n",
+       "      <td>-1086.496835</td>\n",
+       "      <td>283.869609</td>\n",
+       "      <td>-8.858993</td>\n",
+       "      <td>906.627320</td>\n",
+       "      <td>-4.697484</td>\n",
+       "      <td>-3.313676</td>\n",
+       "      <td>-261.048920</td>\n",
+       "      <td>-181.470000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>400.00000</td>\n",
+       "      <td>38510.000000</td>\n",
+       "      <td>-489.493777</td>\n",
+       "      <td>-4.312118</td>\n",
+       "      <td>-5.259095</td>\n",
+       "      <td>3.099000</td>\n",
+       "      <td>-577.580096</td>\n",
+       "      <td>397.511047</td>\n",
+       "      <td>2.218653</td>\n",
+       "      <td>1026.171713</td>\n",
+       "      <td>3.644900</td>\n",
+       "      <td>-0.670996</td>\n",
+       "      <td>-250.647270</td>\n",
+       "      <td>-41.840000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>800.00000</td>\n",
+       "      <td>49018.000000</td>\n",
+       "      <td>261.644731</td>\n",
+       "      <td>3.469012</td>\n",
+       "      <td>-2.589342</td>\n",
+       "      <td>4.624000</td>\n",
+       "      <td>-419.164294</td>\n",
+       "      <td>463.918305</td>\n",
+       "      <td>4.378176</td>\n",
+       "      <td>1045.533335</td>\n",
+       "      <td>5.877582</td>\n",
+       "      <td>-0.043296</td>\n",
+       "      <td>-244.867510</td>\n",
+       "      <td>-2.510000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1200.00000</td>\n",
+       "      <td>60828.000000</td>\n",
+       "      <td>525.909540</td>\n",
+       "      <td>5.421046</td>\n",
+       "      <td>4.904680</td>\n",
+       "      <td>5.667000</td>\n",
+       "      <td>254.994857</td>\n",
+       "      <td>597.492230</td>\n",
+       "      <td>5.825242</td>\n",
+       "      <td>1058.445388</td>\n",
+       "      <td>8.248789</td>\n",
+       "      <td>0.594446</td>\n",
+       "      <td>-232.536750</td>\n",
+       "      <td>50.890000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1599.00000</td>\n",
+       "      <td>104956.000000</td>\n",
+       "      <td>1016.211940</td>\n",
+       "      <td>11.612895</td>\n",
+       "      <td>9.667405</td>\n",
+       "      <td>10.032000</td>\n",
+       "      <td>1092.388611</td>\n",
+       "      <td>745.396220</td>\n",
+       "      <td>11.889713</td>\n",
+       "      <td>1098.958201</td>\n",
+       "      <td>13.536762</td>\n",
+       "      <td>3.056546</td>\n",
+       "      <td>-225.428140</td>\n",
+       "      <td>279.070000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Index     Arithmancy    Astronomy    Herbology  \\\n",
+       "count  1600.00000    1566.000000  1568.000000  1567.000000   \n",
+       "mean    799.50000   49634.570243    39.797131     1.141020   \n",
+       "std     462.02453   16679.806036   520.298268     5.219682   \n",
+       "min       0.00000  -24370.000000  -966.740546   -10.295663   \n",
+       "25%     400.00000   38510.000000  -489.493777    -4.312118   \n",
+       "50%     800.00000   49018.000000   261.644731     3.469012   \n",
+       "75%    1200.00000   60828.000000   525.909540     5.421046   \n",
+       "max    1599.00000  104956.000000  1016.211940    11.612895   \n",
+       "\n",
+       "       Defense Against the Dark Arts   Divination  Muggle Studies  \\\n",
+       "count                    1569.000000  1561.000000     1565.000000   \n",
+       "mean                       -0.387863     3.153910     -224.589915   \n",
+       "std                         5.212794     4.155301      486.344840   \n",
+       "min                       -10.162119    -8.727000    -1086.496835   \n",
+       "25%                        -5.259095     3.099000     -577.580096   \n",
+       "50%                        -2.589342     4.624000     -419.164294   \n",
+       "75%                         4.904680     5.667000      254.994857   \n",
+       "max                         9.667405    10.032000     1092.388611   \n",
+       "\n",
+       "       Ancient Runes  History of Magic  Transfiguration      Potions  \\\n",
+       "count    1565.000000       1557.000000      1566.000000  1570.000000   \n",
+       "mean      495.747970          2.963095      1030.096946     5.950373   \n",
+       "std       106.285165          4.425775        44.125116     3.147854   \n",
+       "min       283.869609         -8.858993       906.627320    -4.697484   \n",
+       "25%       397.511047          2.218653      1026.171713     3.644900   \n",
+       "50%       463.918305          4.378176      1045.533335     5.877582   \n",
+       "75%       597.492230          5.825242      1058.445388     8.248789   \n",
+       "max       745.396220         11.889713      1098.958201    13.536762   \n",
+       "\n",
+       "       Care of Magical Creatures       Charms       Flying  \n",
+       "count                1560.000000  1600.000000  1600.000000  \n",
+       "mean                   -0.053427  -243.374409    21.958012  \n",
+       "std                     0.971457     8.783640    97.631602  \n",
+       "min                    -3.313676  -261.048920  -181.470000  \n",
+       "25%                    -0.670996  -250.647270   -41.840000  \n",
+       "50%                    -0.043296  -244.867510    -2.510000  \n",
+       "75%                     0.594446  -232.536750    50.890000  \n",
+       "max                     3.056546  -225.428140   279.070000  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "d = pd.DataFrame(index=[\"count\", \"mean\", \"std\", \"min\", \"25%\", \"50%\", \"75%\", \"max\"])\n",
     "for column in data:\n",
     "\tif (is_numeric_dtype(data[column])):\n",
-    "\t\tdescribe(data[column])"
+    "\t\td.insert(len(d.columns), column, describe(data[column], column))\n",
+    "d"
    ]
   },
   {
