--- a/testing.ipynb
+++ b/testing.ipynb
@@ -52,7 +52,29 @@
     "X_train_std = sc.transform(X_train)\n",
     "X_test_std = sc.transform(X_test)\n",
     "\n",
-    "model = Logreg().fit(X_train_std, y_train)\n"
+    "model = Logreg(lrate=0.01, epochs=50).fit(X_train_std, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "435\n",
+      "(441,)\n",
+      "0.9863945578231292\n"
+     ]
+    }
+   ],
+   "source": [
+    "testing = y_test == model.predict(X_test_std)\n",
+    "print(np.sum(testing))\n",
+    "print(testing.shape)\n",
+    "print(np.sum(testing) / len(testing))"
    ]
   },
   {
@@ -64,23 +86,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1439\n",
-      "(1467,)\n",
-      "['Ravenclaw', 'Slytherin', 'Ravenclaw', 'Gryffindor', 'Slytherin', 'Hufflepuff', 'Gryffindor', 'Hufflepuff', 'Hufflepuff', 'Hufflepuff']\n"
+      "            0\n",
+      "0  Hufflepuff\n",
+      "1   Ravenclaw\n",
+      "2  Gryffindor\n",
+      "3  Hufflepuff\n",
+      "4  Hufflepuff\n"
      ]
     }
    ],
    "source": [
-    "testing = y == model.predict(sc.transform(X))\n",
-    "print(np.sum(testing))\n",
-    "print(testing.shape)\n",
-    "print(model.predict(sc.transform(X))[:10])"
+    "test_data = pd.read_csv(\"data/dataset_test.csv\")\n",
+    "test_data = test_data.fillna(method=\"ffill\")\n",
+    "X = np.array(test_data.values[:, [9, 17, 8, 10, 11]], dtype=float)\n",
+    "X_std = sc.transform(X)\n",
+    "results = pd.DataFrame(model.predict(X_std))\n",
+    "print(results.head())\n",
+    "results.to_csv(\"eval/houses.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -94,12 +122,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d395e14b840246f2dd919798eb011e54b77e9a65590f77ec675d1f9346b04099"
+    "hash": "8644eaaa33a87c0855da1f02e2d82ea3e64efa6e5fdfaca93fb8b7a843e8433e"
    }
   }
  },
