--- a/testing.ipynb
+++ b/testing.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,25 @@
     "results = pd.DataFrame(model.predict(X_std))\n",
     "print(results.head())\n",
     "results.to_csv(\"eval/houses.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "def save_data(sc, model, path):\n",
+    "    data = {\n",
+    "        \"StandardScaler\":sc,\n",
+    "        \"LogisticRegression\":model\n",
+    "    }\n",
+    "    pickle.dump(data, open(path, \"wb\"))\n",
+    "\n",
+    "def load_data(path):\n",
+    "    return pickle.load(open(path, \"rb\"))"
    ]
   }
  ],
