added 'with open...'

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -118,10 +118,12 @@
     "        \"StandardScaler\":sc,\n",
     "        \"LogisticRegression\":model\n",
     "    }\n",
-    "    pickle.dump(data, open(path, \"wb\"))\n",
+    "    with open(path, \"wb\") as f:\n",
+    "        pickle.dump(data, f)\n",
     "\n",
     "def load_data(path):\n",
-    "    return pickle.load(open(path, \"rb\"))"
+    "    with open(path, \"rb\") as f:\n",
+    "        return pickle.load(f)"
    ]
   }
  ],
